tests/query_errors/pipeline_out/error.txt
Error: 
    4 | end;
    5 | 
    6 | create pipeline out;
      | ^^^^^^^^^^^^^^^^^^^ Name `out` is reserved for built-in nodes, please use another name.
    7 | select event from in into out;
    8 | select event from out into out;